--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,6 @@
   "presets": [
     ["@babel/preset-env", { "targets": { "node": "12" } }],
     "@babel/preset-react"
-  ]
+  ],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
