--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
+    "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-test-renderer": "^16.14.0",
+    "sass-loader": "^7.2.0",
     "style-loader": "^1.3.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
